replace URL() constructors with URI() (#4750)
rework the bug/review page substitution

avoid using "$1" and use custom replacer function to make sure the matched
pattern is properly escaped